@@ -1,18 +1,25 @@
 package com.fincity.saas.core.service.connection.appdata;
 
-import static com.fincity.saas.commons.model.condition.FilterConditionOperator.*;
+import static com.fincity.saas.commons.model.condition.FilterConditionOperator.BETWEEN;
+import static com.fincity.saas.commons.model.condition.FilterConditionOperator.IN;
+import static com.fincity.saas.commons.model.condition.FilterConditionOperator.IS_FALSE;
+import static com.fincity.saas.commons.model.condition.FilterConditionOperator.IS_NULL;
+import static com.fincity.saas.commons.model.condition.FilterConditionOperator.IS_TRUE;
 
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
+import java.util.Objects;
 import java.util.Set;
 import java.util.function.BiFunction;
+import java.util.stream.Collectors;
 
 import org.bson.BsonDateTime;
 import org.bson.BsonInt64;
 import org.bson.BsonObjectId;
+import org.bson.BsonValue;
 import org.bson.Document;
 import org.bson.conversions.Bson;
 import org.bson.types.ObjectId;
@@ -27,8 +34,10 @@ import org.springframework.data.support.PageableExecutionUtils;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 
+import com.fincity.nocode.kirun.engine.json.schema.Schema;
 import com.fincity.nocode.kirun.engine.json.schema.validator.reactive.ReactiveSchemaValidator;
 import com.fincity.nocode.kirun.engine.reactive.ReactiveHybridRepository;
+import com.fincity.nocode.kirun.engine.reactive.ReactiveRepository;
 import com.fincity.nocode.kirun.engine.repository.reactive.KIRunReactiveSchemaRepository;
 import com.fincity.nocode.reactor.util.FlatMapUtil;
 import com.fincity.saas.commons.exeception.GenericException;
@@ -51,6 +60,7 @@ import com.fincity.saas.commons.util.StringUtil;
 import com.fincity.saas.core.document.Connection;
 import com.fincity.saas.core.document.Storage;
 import com.fincity.saas.core.document.Storage.StorageIndex;
+import com.fincity.saas.core.exception.StorageObjectNotFoundException;
 import com.fincity.saas.core.kirun.repository.CoreSchemaRepository;
 import com.fincity.saas.core.model.DataObject;
 import com.fincity.saas.core.model.StorageRelation;
@@ -72,12 +82,12 @@ import com.mongodb.reactivestreams.client.FindPublisher;
 import com.mongodb.reactivestreams.client.MongoClient;
 import com.mongodb.reactivestreams.client.MongoClients;
 import com.mongodb.reactivestreams.client.MongoCollection;
-import com.mongodb.reactivestreams.client.MongoDatabase;
 
 import io.lettuce.core.pubsub.RedisPubSubAdapter;
 import io.lettuce.core.pubsub.StatefulRedisPubSubConnection;
 import io.lettuce.core.pubsub.api.async.RedisPubSubAsyncCommands;
 import jakarta.annotation.PostConstruct;
+import jakarta.annotation.PreDestroy;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 import reactor.util.context.Context;
@@ -93,7 +103,7 @@ public class MongoAppDataService extends RedisPubSubAdapter<String, String> impl
 
 	private static final String CREATED_BY = "createdBy";
 
-	private static final String OBJECTID = "objectId";
+	private static final String OBJECT_ID = "objectId";
 
 	private static final String MESSAGE = "message";
 
@@ -130,8 +140,7 @@ public class MongoAppDataService extends RedisPubSubAdapter<String, String> impl
 			FilterConditionOperator.STRING_LOOSE_EQUAL, "$regex");
 
 	public MongoAppDataService(StorageService storageService, CoreSchemaService schemaService,
-			CacheService cacheService,
-			CoreMessageResourceService msgService, Gson gson, MongoClient defaultClient) {
+			CacheService cacheService, CoreMessageResourceService msgService, Gson gson, MongoClient defaultClient) {
 		this.storageService = storageService;
 		this.schemaService = schemaService;
 		this.cacheService = cacheService;
@@ -150,6 +159,31 @@ public class MongoAppDataService extends RedisPubSubAdapter<String, String> impl
 		subConnect.addListener(this);
 	}
 
+	@PreDestroy
+	public void closeClients() {
+		if (this.defaultClient != null)
+			this.defaultClient.close();
+		this.mongoClients.values().stream().filter(Objects::nonNull).forEach(MongoClient::close);
+		this.mongoClients.clear();
+	}
+
+	@Override
+	public void message(String channel, String message) {
+
+		if (channel == null || !channel.equals(this.channel))
+			return;
+
+		MongoClient client = this.mongoClients.remove(message);
+
+		if (client != null)
+			client.close();
+	}
+
+	private <T> Mono<T> mongoObjectNotFound(String messageId, Object... params) {
+		return this.msgService.throwMessage(msg -> new StorageObjectNotFoundException(HttpStatus.NOT_FOUND, msg),
+				messageId, params);
+	}
+
 	@Override
 	public Mono<Map<String, Object>> create(Connection conn, Storage storage, DataObject dataObject) {
 
@@ -157,110 +191,47 @@ public class MongoAppDataService extends RedisPubSubAdapter<String, String> impl
 
 				SecurityContextUtil::getUsersContextAuthentication,
 
-				ca -> storageService.getSchema(storage),
+				ca -> this.getCollection(conn, storage.getAppCode(), ca.getUrlClientCodeOrElse(storage.getIsAppLevel()),
+						storage.getUniqueName(), storage.getIndexes(), storage.getTextIndexFields()),
 
-				(ca, schema) -> schemaService.getSchemaRepository(storage.getAppCode(), storage.getClientCode()),
+				(ca, collection) -> storageService.getSchema(storage),
 
-				(ca, schema, appSchemaRepo) -> {
+				(ca, collection, schema) -> schemaService.getSchemaRepository(storage.getAppCode(),
+						storage.getClientCode()),
 
-					JsonObject job = this.gson.toJsonTree(dataObject.getData())
-							.getAsJsonObject();
+				(ca, collection, schema, appSchemaRepo) -> this.handleRelationsAndValidate(dataObject.getData(),
+						storage, schema, appSchemaRepo),
 
-					Map<String, JsonElement> map = new HashMap<>();
-					if (storage.getRelations() != null || !storage.getRelations()
-							.isEmpty()) {
-						for (Entry<String, StorageRelation> relation : storage.getRelations().entrySet()) {
-							if (!job.has(relation.getKey()))
-								continue;
-							map.put(relation.getKey(), job.get(relation.getKey()));
-							job.remove(relation.getKey());
-						}
-					}
+				(ca, collection, schema, appSchemaRepo, je) -> Mono.from(collection.insertOne(BJsonUtil.from(
+						storage.getRelations() != null ? storage.getRelations().keySet() : Set.of(), je))),
 
-					return ReactiveSchemaValidator
-							.validate(null, schema,
-									new ReactiveHybridRepository<>(new KIRunReactiveSchemaRepository(),
-											new CoreSchemaRepository(),
-											appSchemaRepo),
-									job)
-							.map(JsonElement::getAsJsonObject)
-							.map(je -> {
-								for (Entry<String, JsonElement> entry : map.entrySet()) {
-									je.add(entry.getKey(), entry.getValue());
-								}
-								return je;
-							});
-				},
+				(ca, collection, schema, appSchemaRepo, je, result) -> Mono
+						.from(collection.find(Filters.eq(ID, result.getInsertedId())).first()),
 
-				(ca, schema, appSchemaRepo, je) -> this
-						.getCollection(conn, storage.getAppCode(),
-								BooleanUtil.safeValueOf(storage.getIsAppLevel()) ? ca.getUrlClientCode()
-										: ca.getClientCode(),
-								storage.getUniqueName(),
-								storage.getIndexes(), storage.getTextIndexFields())
-						.flatMap(collection -> Mono.from(collection.insertOne(BJsonUtil.from(
-								storage.getRelations() != null ? storage.getRelations().keySet() : Set.of(), je)))),
+				(ca, collection, schema, appSchemaRepo, je, result, doc) -> this.addVersion(conn, storage,
+						dataObject.getMessage(),
+						result.getInsertedId() != null ? result.getInsertedId().asObjectId() : null, ca, doc, "CREATE"),
 
-				(ca, schema, appSchemaRepo, je,
-						result) -> this
-								.getCollection(conn, storage.getAppCode(),
-										BooleanUtil.safeValueOf(storage.getIsAppLevel()) ? ca.getUrlClientCode()
-												: ca.getClientCode(),
-										storage.getUniqueName(),
-										storage.getIndexes(), storage.getTextIndexFields())
-								.<Document>flatMap(collection -> Mono
-										.from(collection.find(Filters.eq(ID, result.getInsertedId()))
-												.first())),
-
-				(ca, schema, appSchemaRepo, je, result, doc) -> {
-
-					if (!BooleanUtil.safeValueOf(storage.getIsAudited())
-							&& !BooleanUtil.safeValueOf(storage.getIsVersioned()))
-						return Mono.empty();
-
-					Document versionDocument = new Document();
-					versionDocument.append(OBJECTID, result.getInsertedId());
-					versionDocument.append(MESSAGE, dataObject.getMessage());
-					versionDocument.append(CREATED_AT, new BsonDateTime(System.currentTimeMillis()));
-					versionDocument.append(OPERATION, "CREATE");
-					if (ca.getUser() != null)
-						versionDocument.append(CREATED_BY, new BsonInt64(ca.getUser()
-								.getId()
-								.longValue()));
-					if (BooleanUtil.safeValueOf(storage.getIsVersioned()))
-						versionDocument.append(OBJECT, new Document(dataObject.getData()));
-
-					return Mono.from(this
-							.getVersionCollection(conn, storage.getAppCode(),
-									BooleanUtil.safeValueOf(storage.getIsAppLevel()) ? ca.getUrlClientCode()
-											: ca.getClientCode(),
-									storage.getUniqueName())
-							.insertOne(versionDocument));
-				},
-
-				(ca, schema, appSchemaRepo, je, result, doc, versionResult) -> {
-					doc.remove(ID);
-					var insertedId = result.getInsertedId();
+				(ca, collection, schema, appSchemaRepo, je, result, doc, versionResult) -> {
+					BsonValue insertedId = result.getInsertedId();
 					if (insertedId != null)
 						doc.append(ID, insertedId.asObjectId().getValue().toHexString());
 					return Mono.just((Map<String, Object>) doc);
-				})
-				.contextWrite(Context.of(LogUtil.METHOD_NAME, "MonogAppDataService.create"));
-
+				}).contextWrite(Context.of(LogUtil.METHOD_NAME, "MongoAppDataService.create"));
 	}
 
+	@SuppressWarnings("unchecked")
 	@Override
 	public Mono<Map<String, Object>> update(Connection conn, Storage storage, DataObject dataObject, Boolean override) {
 
-		// added boolean override to differentiate between the incoming request in
+		// TODO: Added boolean override to differentiate between the incoming request in
 		// patch/put
 
-		String key = StringUtil.safeValueOf(dataObject.getData()
-				.get(ID));
+		String key = StringUtil.safeValueOf(dataObject.getData().get(ID));
 
-		if (StringUtil.safeIsBlank(key))
-			return this.msgService.throwMessage(msg -> new GenericException(HttpStatus.NOT_FOUND, msg),
-					AbstractMongoMessageResourceService.OBJECT_NOT_FOUND_TO_UPDATE, storage.getName(), key);
+		if (StringUtil.safeIsBlank(key) || !ObjectId.isValid(key))
+			return this.mongoObjectNotFound(AbstractMongoMessageResourceService.OBJECT_NOT_FOUND_TO_UPDATE,
+					storage.getName(), key);
 
 		BsonObjectId objectId = new BsonObjectId(new ObjectId(key));
 
@@ -268,305 +239,122 @@ public class MongoAppDataService extends RedisPubSubAdapter<String, String> impl
 
 				SecurityContextUtil::getUsersContextAuthentication,
 
-				ca -> storageService.getSchema(storage),
+				ca -> this.getCollection(conn, storage.getAppCode(), ca.getUrlClientCodeOrElse(storage.getIsAppLevel()),
+						storage.getUniqueName(), storage.getIndexes(), storage.getTextIndexFields()),
 
-				(ca, schema) -> schemaService.getSchemaRepository(storage.getAppCode(), storage.getClientCode()),
+				(ca, collection) -> storageService.getSchema(storage),
 
-				(ca, schema, appSchemaRepo) -> {
+				(ca, collection, schema) -> schemaService.getSchemaRepository(storage.getAppCode(),
+						storage.getClientCode()),
+
+				(ca, collection, schema, appSchemaRepo) -> {
 
 					Map<String, Object> overridableObject = dataObject.getData();
 					overridableObject.remove(ID);
 
-					String clientCodeOrURLClientCode = BooleanUtil.safeValueOf(storage.getIsAppLevel())
-							? ca.getUrlClientCode()
-							: ca.getClientCode();
-
 					if (BooleanUtil.safeValueOf(override))
 						return Mono.justOrEmpty(overridableObject);
 
-					return FlatMapUtil.flatMapMono(
-
-							() -> this
-									.getCollection(conn, storage.getAppCode(), clientCodeOrURLClientCode,
-											storage.getUniqueName(), storage.getIndexes(), storage.getTextIndexFields())
-									.flatMap(collection -> Mono.from(
-											collection.find(Filters.eq(ID, objectId))
-													.first()))
-									.map(orgDoc -> {
-										orgDoc.remove(ID);
-										return orgDoc;
-									}),
-
-							originalDocument -> DifferenceApplicator.apply(originalDocument, overridableObject))
+					return Mono.from(collection.find(Filters.eq(ID, objectId)).first())
+							.switchIfEmpty(this.mongoObjectNotFound(
+									AbstractMongoMessageResourceService.OBJECT_NOT_FOUND_TO_UPDATE, storage.getName(),
+									key))
+							.map(doc -> this.removeKey(doc, ID))
+							.map(doc -> this.convertBisonIds(storage, doc, Boolean.FALSE))
+							.flatMap(oDocument -> DifferenceApplicator.apply(overridableObject, oDocument))
 							.contextWrite(Context.of(LogUtil.METHOD_NAME, "MongoAppDataService.update"));
 				},
 
-				(ca, schema, appSchemaRepo, overridableObject) -> {
+				(ca, collection, schema, appSchemaRepo, overridableObject) -> this.handleRelationsAndValidate(
+						(Map<String, Object>) overridableObject, storage, schema, appSchemaRepo),
 
-					JsonObject job = (gson).toJsonTree(overridableObject)
-							.getAsJsonObject();
+				(ca, collection, schema, appSchemaRepo, overridableObject, je) -> Mono.from(collection.replaceOne(
+						Filters.eq(ID, objectId),
+						BJsonUtil.from(storage.getRelations() != null ? storage.getRelations().keySet() : Set.of(),
+								je))),
 
-					Map<String, JsonElement> map = new HashMap<>();
-					if (storage.getRelations() != null || !storage.getRelations()
-							.isEmpty()) {
-						for (Entry<String, StorageRelation> relation : storage.getRelations().entrySet()) {
-							if (!job.has(relation.getKey()))
-								continue;
-							map.put(relation.getKey(), job.get(relation.getKey()));
-							job.remove(relation.getKey());
-						}
-					}
+				(ca, collection, schema, appSchemaRepo, overridableObject, je, result) -> Mono
+						.from(collection.find(Filters.eq(ID, objectId)).first())
+						.switchIfEmpty(
+								this.mongoObjectNotFound(AbstractMongoMessageResourceService.OBJECT_NOT_FOUND_TO_UPDATE,
+										storage.getName(), key)),
 
-					return ReactiveSchemaValidator
-							.validate(null, schema,
-									new ReactiveHybridRepository<>(new KIRunReactiveSchemaRepository(),
-											new CoreSchemaRepository(), appSchemaRepo),
-									job)
-							.map(JsonElement::getAsJsonObject)
-							.map(je -> {
-								for (Entry<String, JsonElement> entry : map.entrySet()) {
-									je.add(entry.getKey(), entry.getValue());
-								}
-								return je;
-							});
-				},
+				(ca, collection, scheme, appSchemaRepo, overridableObject, je, result, doc) -> this.addVersion(conn,
+						storage, dataObject.getMessage(), objectId, ca, doc, "UPDATE"),
 
-				(ca, schema, appSchemaRepo, overridableObject,
-						je) -> this
-								.getCollection(conn, storage.getAppCode(),
-										BooleanUtil.safeValueOf(storage.getIsAppLevel()) ? ca.getUrlClientCode()
-												: ca.getClientCode(),
-										storage.getUniqueName(),
-										storage.getIndexes(), storage.getTextIndexFields())
-								.flatMap(collection -> Mono.from(collection
-										.replaceOne(Filters.eq(ID, objectId),
-												BJsonUtil.from(
-														storage.getRelations() != null ? storage.getRelations().keySet()
-																: Set.of(),
-														je)))),
-
-				(ca, schema, appSchemaRepo, overridableObject, je,
-						result) -> this
-								.getCollection(conn, storage.getAppCode(),
-										BooleanUtil.safeValueOf(storage.getIsAppLevel()) ? ca.getUrlClientCode()
-												: ca.getClientCode(),
-										storage.getUniqueName(),
-										storage.getIndexes(), storage.getTextIndexFields())
-								.flatMap(collection -> Mono.from(collection.find(Filters.eq(ID, objectId))
-										.first())),
-
-				(ca, scheme, appSchemaRepo, overridableObject, je, result, doc) -> {
-
-					if (!BooleanUtil.safeValueOf(storage.getIsAudited())
-							&& !BooleanUtil.safeValueOf(storage.getIsVersioned()))
-						return Mono.empty();
-
-					return addVersion(conn, storage, dataObject, objectId, ca, doc);
-				},
-
-				(ca, scheme, appSchemaRepo, overridableObject, je, result, doc, versionResult) -> {
+				(ca, collection, scheme, appSchemaRepo, overridableObject, je, result, doc, versionResult) -> {
 					doc.append(ID, key);
-					updateDocWithIds(storage, doc);
-					return Mono.just((Map<String, Object>) doc);
-				})
-				.contextWrite(Context.of(LogUtil.METHOD_NAME, "MongoAppDataService.update"));
+					return Mono.just(this.updateDocWithIds(storage, doc));
+				}).contextWrite(Context.of(LogUtil.METHOD_NAME, "MongoAppDataService.update"));
 	}
 
-	private Mono<InsertOneResult> addVersion(Connection conn, Storage storage, DataObject dataObject,
-			BsonObjectId objectId, ContextAuthentication ca, Document doc) {
+	private Mono<JsonObject> handleRelationsAndValidate(Map<String, Object> objectMap, Storage storage, Schema schema,
+			ReactiveRepository<Schema> appSchemaRepo) {
+
+		JsonObject job = this.gson.toJsonTree(objectMap).getAsJsonObject();
+
+		Map<String, JsonElement> relations = new HashMap<>();
+		if (storage.getRelations() != null && !storage.getRelations().isEmpty())
+			storage.getRelations().forEach((key, relation) -> {
+				if (job.has(key))
+					relations.put(key, job.remove(key));
+			});
+
+		return ReactiveSchemaValidator
+				.validate(null, schema,
+						new ReactiveHybridRepository<>(new KIRunReactiveSchemaRepository(), new CoreSchemaRepository(),
+								appSchemaRepo),
+						job)
+				.map(JsonElement::getAsJsonObject)
+				.map(validatedJsonObject -> {
+					relations.forEach(validatedJsonObject::add);
+					return validatedJsonObject;
+				});
+	}
+
+	private Mono<InsertOneResult> addVersion(Connection conn, Storage storage, String dataObjectMessage,
+			BsonObjectId bsonObjectId, ContextAuthentication ca, Document document, String operation) {
+
+		if (!BooleanUtil.safeValueOf(storage.getIsAudited()) && !BooleanUtil.safeValueOf(storage.getIsVersioned()))
+			return Mono.empty();
+
+		String objectId = bsonObjectId != null ? bsonObjectId.getValue().toHexString() : document.get(ID).toString();
 
 		Document versionDocument = new Document();
-		versionDocument.append(OBJECTID, objectId);
-		versionDocument.append(MESSAGE, dataObject.getMessage());
+		versionDocument.append(OBJECT_ID, objectId);
+		versionDocument.append(MESSAGE, dataObjectMessage);
 		versionDocument.append(CREATED_AT, new BsonDateTime(System.currentTimeMillis()));
-		versionDocument.append(OPERATION, "UPDATE");
+		versionDocument.append(OPERATION, operation);
 		if (ca.getUser() != null)
-			versionDocument.append(CREATED_BY, new BsonInt64(ca.getUser()
-					.getId()
-					.longValue()));
-		doc.remove(ID); // removing id from the document
+			versionDocument.append(CREATED_BY, new BsonInt64(ca.getUser().getId().longValue()));
+		document.remove(ID); // removing id from the document
 		if (BooleanUtil.safeValueOf(storage.getIsVersioned()))
-			versionDocument.append(OBJECT, new Document(doc));
+			versionDocument.append(OBJECT, document);
 
-		String clientCodeOrURLClientCode = BooleanUtil.safeValueOf(storage.getIsAppLevel()) ? ca.getUrlClientCode()
-				: ca.getClientCode();
-
-		return Mono.from(this
-				.getVersionCollection(conn, storage.getAppCode(), clientCodeOrURLClientCode, storage.getUniqueName())
-				.insertOne(versionDocument));
+		return this
+				.getVersionCollection(conn, storage.getAppCode(), ca.getUrlClientCodeOrElse(storage.getIsAppLevel()),
+						storage.getUniqueName())
+				.flatMap(collection -> Mono.from(collection.insertOne(versionDocument)));
 	}
 
 	@Override
 	public Mono<Map<String, Object>> read(Connection conn, Storage storage, String id) {
+
+		if (!ObjectId.isValid(id))
+			return this.mongoObjectNotFound(AbstractMongoMessageResourceService.OBJECT_NOT_FOUND,
+					storage.getName(), id);
+
 		BsonObjectId objectId = new BsonObjectId(new ObjectId(id));
 
 		return FlatMapUtil.flatMapMono(
 
-				SecurityContextUtil::getUsersContextAuthentication,
+				() -> this.getCollection(conn, storage),
 
-				ca -> this
-						.getCollection(conn, storage.getAppCode(),
-								BooleanUtil.safeValueOf(storage.getIsAppLevel()) ? ca.getUrlClientCode()
-										: ca.getClientCode(),
-								storage.getUniqueName(),
-								storage.getIndexes(), storage.getTextIndexFields())
-						.flatMap(collection -> Mono.from(collection.find(Filters.eq(ID, objectId)).first())),
-
-				(ca, doc) -> {
-					doc.remove(ID);
-					doc.append(ID, id);
-					return Mono.just((Map<String, Object>) doc);
-				},
-
-				(ca, doc, obj) -> {
-					if (storage.getRelations() != null) {
-						updateDocWithIds(storage, doc);
-					}
-					return Mono.just((Map<String, Object>) doc);
-				})
+				collection -> Mono.from(collection.find(Filters.eq(ID, objectId)).first())
+						.map(doc -> this.convertBisonIds(storage, doc, Boolean.FALSE)))
 				.contextWrite(Context.of(LogUtil.METHOD_NAME, "MongoAppDataService.read"))
-				.switchIfEmpty(this.msgService.throwMessage(msg -> new GenericException(HttpStatus.NOT_FOUND, msg),
-						AbstractMongoMessageResourceService.OBJECT_NOT_FOUND, storage.getName(), id));
-	}
-
-	@Override
-	public Mono<Map<String, Object>> readVersion(Connection conn, Storage storage, String versionId) {
-
-		BsonObjectId objectId = new BsonObjectId(new ObjectId(versionId));
-
-		return FlatMapUtil.flatMapMono(
-
-				SecurityContextUtil::getUsersContextAuthentication,
-
-				ca -> Mono.from(this
-						.getVersionCollection(conn, storage.getAppCode(),
-								BooleanUtil.safeValueOf(storage.getIsAppLevel()) ? ca.getUrlClientCode()
-										: ca.getClientCode(),
-								storage.getUniqueName())
-						.find(Filters.eq(ID, objectId))
-						.first()),
-
-				(ca, doc) -> {
-					doc.remove(ID);
-					doc.append(ID, versionId);
-
-					String id = doc.getObjectId(OBJECTID)
-							.toHexString();
-					doc.remove(OBJECTID);
-					doc.append(OBJECTID, id);
-
-					if (storage.getRelations() != null) {
-						updateDocWithIds(storage, doc);
-					}
-
-					return Mono.just((Map<String, Object>) doc);
-				})
-				.contextWrite(Context.of(LogUtil.METHOD_NAME, "MongoAppDataService.read"))
-				.switchIfEmpty(this.msgService.throwMessage(msg -> new GenericException(HttpStatus.NOT_FOUND, msg),
-						AbstractMongoMessageResourceService.OBJECT_NOT_FOUND, storage.getName(), versionId));
-
-	}
-
-	private void updateDocWithIds(Storage storage, Document doc) {
-
-		for (Entry<String, StorageRelation> relationEntry : storage.getRelations().entrySet()) {
-			if (!doc.containsKey(relationEntry.getKey()))
-				continue;
-
-			Object v = doc.get(relationEntry.getKey());
-			if (v instanceof ObjectId oId)
-				doc.put(relationEntry.getKey(), oId.toHexString());
-			else if (v instanceof List<?> list) {
-				List<String> newList = new ArrayList<>();
-				for (Object o : list) {
-					if (o instanceof ObjectId oId)
-						newList.add(oId.toHexString());
-					else if (o != null)
-						newList.add(o.toString());
-				}
-				doc.put(relationEntry.getKey(), newList);
-			}
-		}
-	}
-
-	@Override
-	public Mono<Boolean> delete(Connection conn, Storage storage, String id) {
-
-		BsonObjectId objectId = new BsonObjectId(new ObjectId(id));
-
-		return FlatMapUtil.flatMapMono(
-
-				SecurityContextUtil::getUsersContextAuthentication,
-
-				ca -> this
-						.getCollection(conn, storage.getAppCode(),
-								BooleanUtil.safeValueOf(storage.getIsAppLevel()) ? ca.getUrlClientCode()
-										: ca.getClientCode(),
-								storage.getUniqueName(),
-								storage.getIndexes(), storage.getTextIndexFields())
-						.flatMap(collection -> Mono.from(collection
-								.findOneAndDelete(Filters.eq(ID, objectId)))
-								.map(e -> true))
-
-		)
-				.contextWrite(Context.of(LogUtil.METHOD_NAME, "MongoAppDataService.delete"))
-				.switchIfEmpty(this.msgService.throwMessage(msg -> new GenericException(HttpStatus.NOT_FOUND, msg),
-						AbstractMongoMessageResourceService.OBJECT_NOT_FOUND, storage.getName(), id));
-
-	}
-
-	@Override
-	public Flux<Map<String, Object>> readPageAsFlux(Connection conn, Storage storage, Query query) {
-
-		Pageable page = query.getPageable();
-		AbstractCondition condition = query.getCondition();
-
-		return SecurityContextUtil.getUsersContextAuthentication()
-				.flatMapMany(ca -> this.filter(storage, condition)
-						.flatMapMany(bsonCondition -> {
-
-							Flux<Document> findFlux = this.getCollection(conn,
-									storage.getAppCode(),
-									BooleanUtil.safeValueOf(storage.getIsAppLevel()) ? ca.getUrlClientCode()
-											: ca.getClientCode(),
-									storage.getUniqueName(), storage.getIndexes(), storage.getTextIndexFields())
-									.flatMapMany(
-											collection -> applyQueryOnElements(collection, query, bsonCondition, page));
-
-							return findFlux.map(doc -> {
-								String id = doc.getObjectId(ID)
-										.toHexString();
-								doc.remove(ID);
-								doc.append(ID, id);
-								if (storage.getRelations() != null) {
-									updateDocWithIds(storage, doc);
-								}
-								return (Map<String, Object>) doc;
-							});
-
-						}));
-	}
-
-	@Override
-	public Mono<Boolean> checkifExists(Connection conn, Storage storage, String id) {
-
-		BsonObjectId objectId = new BsonObjectId(new ObjectId(id));
-
-		return FlatMapUtil.flatMapMono(
-
-				SecurityContextUtil::getUsersContextAuthentication,
-
-				ca -> this
-						.getCollection(conn, storage.getAppCode(),
-								BooleanUtil.safeValueOf(storage.getIsAppLevel()) ? ca.getUrlClientCode()
-										: ca.getClientCode(),
-								storage.getUniqueName(),
-								storage.getIndexes(), storage.getTextIndexFields())
-						.flatMap(collection -> Mono.from(collection.countDocuments(Filters.eq(ID, objectId))))
-						.map(e -> e > 0)
-
-		)
-				.contextWrite(Context.of(LogUtil.METHOD_NAME, "MongoAppDataService.checkifExists"));
+				.switchIfEmpty(this.mongoObjectNotFound(AbstractMongoMessageResourceService.OBJECT_NOT_FOUND,
+						storage.getName(), id));
 	}
 
 	@Override
@@ -578,49 +366,52 @@ public class MongoAppDataService extends RedisPubSubAdapter<String, String> impl
 
 		return FlatMapUtil.flatMapMono(
 
-				SecurityContextUtil::getUsersContextAuthentication,
+				() -> this.getCollection(conn, storage),
 
-				ca -> this.filter(storage, condition),
+				collection -> this.filter(storage, condition),
 
-				(ca, bsonCondition) -> {
+				(collection, bsonCondition) -> this.applyQueryOnElements(collection, query, bsonCondition, page)
+						.map(doc -> this.convertBisonIds(storage, doc, Boolean.FALSE)).collectList(),
 
-					Flux<Document> findFlux = this.getCollection(conn, storage.getAppCode(),
-							BooleanUtil.safeValueOf(storage.getIsAppLevel()) ? ca.getUrlClientCode()
-									: ca.getClientCode(),
-							storage.getUniqueName(), storage.getIndexes(), storage.getTextIndexFields())
-							.flatMapMany(collection -> applyQueryOnElements(collection, query, bsonCondition, page));
+				(collection, bsonCondition, list) -> BooleanUtil.safeValueOf(count)
+						? Mono.from(collection.countDocuments(bsonCondition))
+						: Mono.just(page.getOffset() + list.size()),
 
-					return findFlux.map(doc -> {
-						String id = doc.getObjectId(ID)
-								.toHexString();
-						doc.remove(ID);
-						doc.append(ID, id);
-						if (storage.getRelations() != null) {
-							updateDocWithIds(storage, doc);
-						}
-						return (Map<String, Object>) doc;
-					})
-							.collectList();
-				},
-
-				(ca, bsonCondition, list) -> {
-
-					if (BooleanUtil.safeValueOf(count))
-						return this
-								.getCollection(conn, storage.getAppCode(),
-										BooleanUtil.safeValueOf(storage.getIsAppLevel()) ? ca.getUrlClientCode()
-												: ca.getClientCode(),
-										storage.getUniqueName(),
-										storage.getIndexes(), storage.getTextIndexFields())
-								.flatMap(collection -> Mono.from(collection
-										.countDocuments(bsonCondition)));
-
-					return Mono.just(page.getOffset() + list.size());
-				},
-
-				(ca, bsonCondition, list, cnt) -> Mono.just(PageableExecutionUtils.getPage(list, page, cnt::longValue)))
+				(ca, bsonCondition, list, cnt) -> Mono
+						.just(PageableExecutionUtils.getPage(list, page, cnt::longValue)))
 				.contextWrite(Context.of(LogUtil.METHOD_NAME, "MongoAppDataService.readPage"));
+	}
 
+	@Override
+	public Flux<Map<String, Object>> readPageAsFlux(Connection conn, Storage storage, Query query) {
+
+		Pageable page = query.getPageable();
+		AbstractCondition condition = query.getCondition();
+
+		return this.getCollection(conn, storage)
+				.flatMapMany(collection -> this.filter(storage, condition)
+						.flatMapMany(bsonCondition -> this.applyQueryOnElements(collection, query, bsonCondition, page)
+								.map(document -> this.convertBisonIds(storage, document, Boolean.FALSE))))
+				.contextWrite(Context.of(LogUtil.METHOD_NAME, "MongoAppDataService.readPageAsFlux"));
+	}
+
+	@Override
+	public Mono<Boolean> delete(Connection conn, Storage storage, String id) {
+
+		if (!ObjectId.isValid(id))
+			return this.mongoObjectNotFound(AbstractMongoMessageResourceService.OBJECT_NOT_FOUND,
+					storage.getName(), id);
+
+		BsonObjectId objectId = new BsonObjectId(new ObjectId(id));
+
+		return FlatMapUtil.flatMapMono(
+
+				() -> this.getCollection(conn, storage),
+
+				collection -> Mono.from(collection.findOneAndDelete(Filters.eq(ID, objectId))).map(e -> Boolean.TRUE))
+				.contextWrite(Context.of(LogUtil.METHOD_NAME, "MongoAppDataService.delete"))
+				.switchIfEmpty(this.mongoObjectNotFound(AbstractMongoMessageResourceService.OBJECT_NOT_FOUND,
+						storage.getName(), id));
 	}
 
 	@Override
@@ -630,37 +421,34 @@ public class MongoAppDataService extends RedisPubSubAdapter<String, String> impl
 
 		return FlatMapUtil.flatMapMono(
 
-				SecurityContextUtil::getUsersContextAuthentication,
+				() -> this.getCollection(conn, storage),
 
-				ca -> this.filter(storage, condition),
+				collection -> this.filter(storage, condition),
 
-				(ca, bsonCondition) -> {
-
-					if (BooleanUtil.safeValueOf(devMode)) {
-
-						return this
-								.getCollection(conn, storage.getAppCode(),
-										BooleanUtil.safeValueOf(storage.getIsAppLevel()) ? ca.getUrlClientCode()
-												: ca.getClientCode(),
-										storage.getUniqueName(),
-										storage.getIndexes(), storage.getTextIndexFields())
-								.flatMap(collection -> Mono.from(collection
-										.countDocuments(bsonCondition)));
-					} else {
-
-						return this
-								.getCollection(conn, storage.getAppCode(),
-										BooleanUtil.safeValueOf(storage.getIsAppLevel()) ? ca.getUrlClientCode()
-												: ca.getClientCode(),
-										storage.getUniqueName(),
-										storage.getIndexes(), storage.getTextIndexFields())
-								.flatMap(collection -> Mono.from(collection
-										.deleteMany(bsonCondition))
-
-										.map(DeleteResult::getDeletedCount));
-					}
-				})
+				(collection, bsonCondition) -> BooleanUtil.safeValueOf(devMode)
+						? Mono.from(collection.countDocuments(bsonCondition))
+						: Mono.from(collection.deleteMany(bsonCondition)).map(DeleteResult::getDeletedCount))
 				.contextWrite(Context.of(LogUtil.METHOD_NAME, "MongoAppDataService.deleteByFilter"));
+	}
+
+	@Override
+	public Mono<Map<String, Object>> readVersion(Connection conn, Storage storage, String versionId) {
+
+		if (!ObjectId.isValid(versionId))
+			return this.mongoObjectNotFound(AbstractMongoMessageResourceService.OBJECT_NOT_FOUND, storage.getName(),
+					versionId);
+
+		BsonObjectId objectId = new BsonObjectId(new ObjectId(versionId));
+
+		return FlatMapUtil.flatMapMono(
+
+				() -> this.getCollection(conn, storage),
+
+				collection -> Mono.from(collection.find(Filters.eq(ID, objectId)).first())
+						.map(doc -> convertBisonIds(storage, doc, Boolean.TRUE)))
+				.contextWrite(Context.of(LogUtil.METHOD_NAME, "MongoAppDataService.read"))
+				.switchIfEmpty(this.msgService.throwMessage(msg -> new GenericException(HttpStatus.NOT_FOUND, msg),
+						AbstractMongoMessageResourceService.OBJECT_NOT_FOUND, storage.getName(), versionId));
 	}
 
 	@Override
@@ -669,64 +457,49 @@ public class MongoAppDataService extends RedisPubSubAdapter<String, String> impl
 
 		Pageable page = query.getPageable();
 
-		FilterCondition objectIdFilterCondition = new FilterCondition().setField(OBJECTID)
-				.setValue(new ObjectId(objectId))
-				.setOperator(FilterConditionOperator.EQUALS);
+		FilterCondition objectIdFilterCondition = new FilterCondition().setField(OBJECT_ID)
+				.setValue(new ObjectId(objectId)).setOperator(FilterConditionOperator.EQUALS);
 
 		AbstractCondition condition = query.getCondition() == null ? objectIdFilterCondition
 				: new ComplexCondition().setConditions(List.of(objectIdFilterCondition, query.getCondition()))
 						.setOperator(ComplexConditionOperator.AND);
+
 		Boolean count = query.getCount();
 
 		return FlatMapUtil.flatMapMono(
 
-				SecurityContextUtil::getUsersContextAuthentication,
+				() -> this.getVersionCollection(conn, storage),
 
-				ca -> this.filter(storage, condition),
+				vCollection -> this.filter(storage, condition),
 
-				(ca, bsonCondition) -> {
+				(vCollection, bsonCondition) -> this
+						.applyQueryOnElements(vCollection, query, bsonCondition, page)
+						.map(doc -> this.convertBisonIds(storage, doc, Boolean.FALSE)).collectList(),
 
-					Flux<Document> findFlux = applyQueryOnElements(this.getVersionCollection(conn, storage.getAppCode(),
-							BooleanUtil.safeValueOf(storage.getIsAppLevel()) ? ca.getUrlClientCode()
-									: ca.getClientCode(),
-							storage.getUniqueName()), query, bsonCondition, page);
+				(vCollection, bsonCondition, list) -> BooleanUtil.safeValueOf(count)
+						? Mono.from(vCollection.countDocuments(bsonCondition))
+						: Mono.just(page.getOffset() + list.size()),
 
-					return findFlux.map(doc -> {
-						String id = doc.getObjectId(ID)
-								.toHexString();
-						doc.remove(ID);
-						doc.append(ID, id);
-
-						id = doc.getObjectId(OBJECTID)
-								.toHexString();
-						doc.remove(OBJECTID);
-						doc.append(OBJECTID, id);
-
-						if (storage.getRelations() != null) {
-							updateDocWithIds(storage, doc);
-						}
-
-						return (Map<String, Object>) doc;
-					})
-							.collectList();
-				},
-
-				(ca, bsonCondition, list) -> {
-
-					if (BooleanUtil.safeValueOf(count))
-						return Mono.from(this
-								.getVersionCollection(conn, storage.getAppCode(),
-										BooleanUtil.safeValueOf(storage.getIsAppLevel()) ? ca.getUrlClientCode()
-												: ca.getClientCode(),
-										storage.getUniqueName())
-								.countDocuments(bsonCondition));
-
-					return Mono.just(page.getOffset() + list.size());
-				},
-
-				(ca, bsonCondition, list, cnt) -> Mono.just(PageableExecutionUtils.getPage(list, page, cnt::longValue)))
+				(vCollection, bsonCondition, list, cnt) -> Mono
+						.just(PageableExecutionUtils.getPage(list, page, cnt::longValue)))
 				.contextWrite(Context.of(LogUtil.METHOD_NAME, "MongoAppDataService.readPageVersion"));
 
+	}
+
+	@Override
+	public Mono<Boolean> checkifExists(Connection conn, Storage storage, String id) {
+
+		if (!ObjectId.isValid(id))
+			return Mono.just(Boolean.FALSE);
+
+		BsonObjectId objectId = new BsonObjectId(new ObjectId(id));
+
+		return FlatMapUtil.flatMapMono(
+
+				() -> this.getCollection(conn, storage),
+
+				collection -> Mono.from(collection.countDocuments(Filters.eq(ID, objectId))).map(e -> e > 0))
+				.contextWrite(Context.of(LogUtil.METHOD_NAME, "MongoAppDataService.checkifExists"));
 	}
 
 	@Override
@@ -734,46 +507,31 @@ public class MongoAppDataService extends RedisPubSubAdapter<String, String> impl
 
 		return FlatMapUtil.flatMapMono(
 
-				SecurityContextUtil::getUsersContextAuthentication,
+				() -> this.getCollection(conn, storage)
+						.flatMap(collection -> Mono.from(collection.drop()).then(Mono.just(Boolean.TRUE))),
 
-				ca -> this
-						.getCollection(conn, storage.getAppCode(),
-								BooleanUtil.safeValueOf(storage.getIsAppLevel()) ? ca.getUrlClientCode()
-										: ca.getClientCode(),
-								storage.getUniqueName(),
-								storage.getIndexes(), storage.getTextIndexFields())
-						.flatMap(collection -> Mono.from(
-								collection.drop()))
-						.map(e -> true),
-
-				(ca, result) -> {
+				deleted -> {
 					if (BooleanUtil.safeValueOf(storage.getIsVersioned())
 							|| BooleanUtil.safeValueOf(storage.getIsAudited()))
-						return Mono.from(this
-								.getVersionCollection(conn, storage.getAppCode(),
-										BooleanUtil.safeValueOf(storage.getIsAppLevel()) ? ca.getUrlClientCode()
-												: ca.getClientCode(),
-										storage.getUniqueName())
-								.drop()).map(e -> true);
+						return this.getVersionCollection(conn, storage)
+								.flatMap(vCollection -> Mono.from(vCollection.drop()))
+								.then(Mono.just(deleted));
 
-					return Mono.just(true);
+					return Mono.just(deleted);
 				}).contextWrite(Context.of(LogUtil.METHOD_NAME, "MongoAppDataService.deleteStorage"));
 	}
 
 	private Flux<Document> applyQueryOnElements(MongoCollection<Document> collection, Query query, Bson bsonCondition,
 			Pageable page) {
 
-		Flux<Document> findFlux;
-
-		if (query.getFields() == null || query.getFields()
-				.isEmpty()) {
+		if (query.getFields() == null || query.getFields().isEmpty()) {
 			FindPublisher<Document> publisher = collection.find(bsonCondition);
 
 			if (!Query.DEFAULT_SORT.equals(page.getSort()))
 				publisher.sort(this.sort(page.getSort()));
 
-			findFlux = Flux.from(publisher.skip((int) page.getOffset())
-					.limit(page.getPageSize()));
+			return Flux.from(publisher.skip((int) page.getOffset()).limit(page.getPageSize()));
+
 		} else {
 
 			List<Bson> pipeLines = new ArrayList<>(List.of(Aggregates.match(bsonCondition)));
@@ -791,16 +549,12 @@ public class MongoAppDataService extends RedisPubSubAdapter<String, String> impl
 			pipeLines.add(Aggregates.skip((int) page.getOffset()));
 			pipeLines.add(Aggregates.limit(page.getPageSize()));
 
-			var agg = collection.aggregate(pipeLines);
-
-			findFlux = Flux.from(agg);
+			return Flux.from(collection.aggregate(pipeLines));
 		}
-
-		return findFlux;
-
 	}
 
 	private Bson sort(Sort sort) {
+
 		if (sort == null)
 			return null;
 
@@ -813,24 +567,19 @@ public class MongoAppDataService extends RedisPubSubAdapter<String, String> impl
 				.toList());
 	}
 
-	protected Mono<Bson> filter(Storage storage, AbstractCondition condition) {
+	private Mono<Bson> filter(Storage storage, AbstractCondition condition) {
 
 		if (condition == null)
 			return Mono.just(Filters.empty());
 
-		Mono<Bson> cond;
-		if (condition instanceof ComplexCondition cc)
-			cond = complexConditionFilter(storage, cc);
-		else
-			cond = filterConditionFilter(storage, (FilterCondition) condition);
-
-		return cond.defaultIfEmpty(Filters.empty());
+		return (condition instanceof ComplexCondition cc ? this.complexConditionFilter(storage, cc)
+				: this.filterConditionFilter(storage, (FilterCondition) condition))
+				.defaultIfEmpty(Filters.empty());
 	}
 
 	private Mono<Bson> complexConditionFilter(Storage storage, ComplexCondition cc) {
 
-		if (cc.getConditions() == null || cc.getConditions()
-				.isEmpty())
+		if (cc.getConditions() == null || cc.getConditions().isEmpty())
 			return Mono.empty();
 
 		return Flux.concat(cc.getConditions()
@@ -839,17 +588,17 @@ public class MongoAppDataService extends RedisPubSubAdapter<String, String> impl
 				.toList())
 				.map(e -> cc.isNegate() ? Filters.not(e) : e)
 				.collectList()
-				.map(conds -> {
+				.map(conditions -> {
 
 					if (cc.getOperator() == ComplexConditionOperator.AND)
-						return cc.isNegate() ? Filters.or(conds) : Filters.and(conds);
+						return cc.isNegate() ? Filters.or(conditions) : Filters.and(conditions);
 
-					return cc.isNegate() ? Filters.and(conds) : Filters.or(conds);
+					return cc.isNegate() ? Filters.and(conditions) : Filters.or(conditions);
 				});
 	}
 
 	private Mono<Bson> filterConditionFilter(Storage storage, FilterCondition fc) { // NOSONAR
-		// in order to cover all operators this kind of check is essential
+		// to cover all operators this kind of check is essential
 
 		if (fc == null)
 			return Mono.empty();
@@ -870,12 +619,9 @@ public class MongoAppDataService extends RedisPubSubAdapter<String, String> impl
 			return Mono.just(Filters.eq(fc.getField(),
 					fc.isNegate() ? fc.getOperator() == IS_FALSE : fc.getOperator() == IS_TRUE));
 
-		if (fc.getOperator() == IS_NULL) {
-			if (fc.isNegate())
-				return Mono.just(Filters.ne(fc.getField(), null));
-			else
-				return Mono.just(Filters.or(Filters.eq(fc.getField(), null), Filters.exists(fc.getField(), false)));
-		}
+		if (fc.getOperator() == IS_NULL)
+			return fc.isNegate() ? Mono.just(Filters.ne(fc.getField(), null))
+					: Mono.just(Filters.or(Filters.eq(fc.getField(), null), Filters.exists(fc.getField(), false)));
 
 		Object value = fc.getValue();
 		boolean isObjectIdField = (fc.getField().equals("_id")
@@ -908,8 +654,7 @@ public class MongoAppDataService extends RedisPubSubAdapter<String, String> impl
 
 		if (fc.getOperator() == FilterConditionOperator.MATCH_ALL) {
 
-			if (value == null && fc.getMultiValue() == null && fc.getMultiValue()
-					.isEmpty())
+			if (value == null && (fc.getMultiValue() == null || fc.getMultiValue().isEmpty()))
 				return Mono.empty();
 
 			Document doc = new Document(Map.of(fc.getField(), Map.of("$all", value == null ? fc.getMultiValue()
@@ -934,9 +679,7 @@ public class MongoAppDataService extends RedisPubSubAdapter<String, String> impl
 				return Mono.just(Filters.or(first, second));
 		}
 
-		BiFunction<String, Object, Bson> function;
-
-		function = switch (fc.getOperator()) {
+		BiFunction<String, Object, Bson> function = switch (fc.getOperator()) {
 			case EQUALS -> fc.isNegate() ? Filters::ne : Filters::eq;
 			case GREATER_THAN -> fc.isNegate() ? Filters::lte : Filters::gt;
 			case GREATER_THAN_EQUAL -> fc.isNegate() ? Filters::lt : Filters::gte;
@@ -956,13 +699,10 @@ public class MongoAppDataService extends RedisPubSubAdapter<String, String> impl
 				filter = Filters.regex(fc.getField(), StringUtil.safeValueOf(value, ""));
 				return Mono.just(fc.isNegate() ? Filters.not(filter) : filter);
 			}
-
 			case STRING_LOOSE_EQUAL -> {
-				filter = Filters.regex(fc.getField(), value
-						.toString(), "i");
+				filter = Filters.regex(fc.getField(), value.toString(), "i");
 				return Mono.just(fc.isNegate() ? Filters.not(filter) : filter);
 			}
-
 			default -> {
 				return Mono.empty();
 			}
@@ -981,8 +721,7 @@ public class MongoAppDataService extends RedisPubSubAdapter<String, String> impl
 			return List.of();
 
 		int from = 0;
-		String iValue = objValue.toString()
-				.trim();
+		String iValue = objValue.toString().trim();
 
 		List<Object> obj = new ArrayList<>();
 		for (int i = 0; i < iValue.length(); i++) { // NOSONAR
@@ -1004,30 +743,32 @@ public class MongoAppDataService extends RedisPubSubAdapter<String, String> impl
 		}
 
 		return obj;
-
 	}
 
-	@Override
-	public void message(String channel, String message) {
+	private Mono<MongoCollection<Document>> getCollection(Connection conn, Storage storage) {
+		return SecurityContextUtil.getUsersContextAuthentication()
+				.flatMap(ca -> this.getCollection(conn, storage.getAppCode(),
+						ca.getUrlClientCodeOrElse(storage.getIsAppLevel()),
+						storage.getUniqueName(), storage.getIndexes(), storage.getTextIndexFields()));
+	}
 
-		if (channel == null || !channel.equals(this.channel))
-			return;
-
-		this.mongoClients.remove(message);
+	private Mono<MongoCollection<Document>> getVersionCollection(Connection conn, Storage storage) {
+		return SecurityContextUtil.getUsersContextAuthentication()
+				.flatMap(ca -> this.getVersionCollection(conn, storage.getAppCode(),
+						ca.getUrlClientCodeOrElse(storage.getIsAppLevel()), storage.getUniqueName()));
 	}
 
 	private Mono<MongoCollection<Document>> getCollection(Connection conn, String appCode, String clientCode,
 			String uniqueName, Map<String, StorageIndex> indexes, List<String> textIndexFields) {
-		MongoClient client = conn == null ? defaultClient
-				: mongoClients.computeIfAbsent(getConnectionString(conn), key -> this.getMongoClient(conn));
+
+		MongoClient client = this.getMongoClient(conn);
 
 		if (client == null)
 			throw msgService.nonReactiveMessage(msg -> new GenericException(HttpStatus.NOT_FOUND, msg),
 					CoreMessageResourceService.CONNECTION_DETAILS_MISSING, "url");
 
-		final MongoDatabase database = client.getDatabase(clientCode + "_" + appCode);
-
-		final MongoCollection<Document> collection = database.getCollection(uniqueName);
+		final MongoCollection<Document> collection = client.getDatabase(clientCode + "_" + appCode)
+				.getCollection(uniqueName);
 
 		return cacheService
 				.cacheValueOrGet(uniqueName + IAppDataService.CACHE_SUFFIX_FOR_INDEX_CREATION,
@@ -1035,10 +776,73 @@ public class MongoAppDataService extends RedisPubSubAdapter<String, String> impl
 				.map(e -> collection);
 	}
 
+	private Mono<MongoCollection<Document>> getVersionCollection(Connection conn, String appCode, String clientCode,
+			String uniqueName) {
+
+		MongoClient client = this.getMongoClient(conn);
+
+		if (client == null)
+			throw msgService.nonReactiveMessage(msg -> new GenericException(HttpStatus.NOT_FOUND, msg),
+					CoreMessageResourceService.CONNECTION_DETAILS_MISSING, "url");
+
+		return Mono.just(client.getDatabase(clientCode + "_" + appCode)
+				.getCollection(uniqueName + "_version"));
+	}
+
+	private Map<String, Object> convertBisonIds(Storage storage, Document document, boolean isVersion) {
+
+		this.convertBisonId(document, ID);
+
+		if (isVersion)
+			this.convertBisonId(document, OBJECT_ID);
+
+		return storage.getRelations() != null ? this.updateDocWithIds(storage, document) : document;
+	}
+
+	private void convertBisonId(Document document, String key) {
+
+		if (!document.containsKey(key))
+			return;
+
+		String id = document.getObjectId(key).toHexString();
+		this.removeKey(document, key);
+		document.append(key, id);
+	}
+
+	private Document removeKey(Document document, String key) {
+		document.remove(key);
+		return document;
+	}
+
+	private Map<String, Object> updateDocWithIds(Storage storage, Document doc) {
+
+		for (Entry<String, StorageRelation> relationEntry : storage.getRelations().entrySet()) {
+			if (!doc.containsKey(relationEntry.getKey()))
+				continue;
+
+			Object v = doc.get(relationEntry.getKey());
+			if (v instanceof ObjectId oId)
+				doc.put(relationEntry.getKey(), oId.toHexString());
+			else if (v instanceof List<?> list) {
+				List<String> newList = new ArrayList<>();
+				for (Object o : list) {
+					if (o instanceof ObjectId oId)
+						newList.add(oId.toHexString());
+					else if (o != null)
+						newList.add(o.toString());
+				}
+				doc.put(relationEntry.getKey(), newList);
+			}
+		}
+
+		return doc;
+	}
+
 	private Mono<Boolean> manageIndexes(MongoCollection<Document> collection, Map<String, StorageIndex> indexes,
 			List<String> textIndexFields) {
 
 		return FlatMapUtil.flatMapMonoWithNull(
+
 				() -> this.dropRemovedIndexes(collection, indexes, textIndexFields),
 
 				x -> {
@@ -1051,37 +855,32 @@ public class MongoAppDataService extends RedisPubSubAdapter<String, String> impl
 								StorageIndex ins = e.getValue();
 
 								if (ins.getFields().isEmpty())
-									return Mono.just(true);
+									return Mono.just(Boolean.TRUE);
 
-								var bdocs = ins.getFields().stream()
+								List<Bson> bDocs = ins.getFields().stream()
 										.map(si -> si.getDirection() == Direction.ASC
 												? Indexes.ascending(si.getFieldName())
 												: Indexes.descending(si.getFieldName()))
 										.toList();
 
-								var ind = bdocs.size() == 1 ? bdocs.get(0) : Indexes.compoundIndex(bdocs);
+								Bson ind = bDocs.size() == 1 ? bDocs.getFirst() : Indexes.compoundIndex(bDocs);
 
 								IndexOptions options = new IndexOptions().name(e.getKey()).unique(ins.isUnique());
-								return Mono.from(collection.createIndex(ind, options)).map(y -> true);
-							}).collectList().map(e -> true);
+								return Mono.from(collection.createIndex(ind, options)).map(y -> Boolean.TRUE);
+							}).collectList().map(e -> Boolean.TRUE);
 				},
 
 				(x, ins) -> {
 					if (textIndexFields == null || textIndexFields.isEmpty())
 						return Mono.empty();
 
-					Document textIndexDoc = new Document();
-					for (String fieldName : textIndexFields)
-						textIndexDoc.put(fieldName, "text");
-					return Mono.from(collection.createIndex(textIndexDoc, new IndexOptions().name(TEXT_INDEX_NAME)))
-							.map(e -> true);
-				}
-
-		)
-				.defaultIfEmpty(true)
-				.contextWrite(
-						Context.of(LogUtil.METHOD_NAME, "MongoAppDataService.getCollection (Cache Supplier)"));
-
+					return Mono.from(collection.createIndex(
+							new Document(textIndexFields.stream()
+									.collect(Collectors.toMap(field -> field, value -> "text"))),
+							new IndexOptions().name(TEXT_INDEX_NAME))).map(e -> Boolean.TRUE);
+				})
+				.defaultIfEmpty(Boolean.TRUE)
+				.contextWrite(Context.of(LogUtil.METHOD_NAME, "MongoAppDataService.getCollection (Cache Supplier)"));
 	}
 
 	private Mono<Boolean> dropRemovedIndexes(MongoCollection<Document> collection, Map<String, StorageIndex> indexes,
@@ -1089,50 +888,38 @@ public class MongoAppDataService extends RedisPubSubAdapter<String, String> impl
 
 		return Flux.from(collection.listIndexes())
 				.filter(e -> {
-
 					String indexName = e.getString("name");
 					if (indexName.equals("_id_"))
-						return false;
+						return Boolean.FALSE;
 
 					if (indexName.equals(TEXT_INDEX_NAME))
 						return textIndexFields == null || textIndexFields.isEmpty();
 
 					if (indexes == null || indexes.isEmpty())
-						return true;
+						return Boolean.TRUE;
 
 					return !indexes.containsKey(indexName);
 				})
 				.flatMap(e -> Mono.from(collection.dropIndex(e.getString("name"))))
-				.then(Mono.just(true));
+				.then(Mono.just(Boolean.TRUE));
 	}
 
-	private MongoCollection<Document> getVersionCollection(Connection conn, String appCode, String clientCode,
-			String uniqueName) {
-		MongoClient client = conn == null ? defaultClient
-				: mongoClients.computeIfAbsent(getConnectionString(conn), key -> this.getMongoClient(conn));
+	private MongoClient getMongoClient(Connection connection) {
+		return connection == null ? defaultClient
+				: mongoClients.computeIfAbsent(getConnectionString(connection),
+						key -> this.createMongoClient(connection));
+	}
 
-		if (client == null)
+	private synchronized MongoClient createMongoClient(Connection conn) {
+
+		if (conn.getConnectionDetails() == null || StringUtil.safeIsBlank(conn.getConnectionDetails().get("url")))
 			throw msgService.nonReactiveMessage(msg -> new GenericException(HttpStatus.NOT_FOUND, msg),
 					CoreMessageResourceService.CONNECTION_DETAILS_MISSING, "url");
 
-		return client.getDatabase(clientCode + "_" + appCode)
-				.getCollection(uniqueName + "_version");
-	}
-
-	private synchronized MongoClient getMongoClient(Connection conn) {
-
-		if (conn.getConnectionDetails() == null || StringUtil.safeIsBlank(conn.getConnectionDetails()
-				.get("url")))
-			throw msgService.nonReactiveMessage(msg -> new GenericException(HttpStatus.NOT_FOUND, msg),
-					CoreMessageResourceService.CONNECTION_DETAILS_MISSING, "url");
-
-		return MongoClients.create(conn.getConnectionDetails()
-				.get("url")
-				.toString());
+		return MongoClients.create(conn.getConnectionDetails().get("url").toString());
 	}
 
 	private String getConnectionString(Connection conn) {
 		return "Connection : " + conn.getId();
 	}
-
 }
